--- a/style.css
+++ b/style.css
@@ -66,6 +66,31 @@
 }
 
 /* sidebar */
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    justify-content: flex-start;
+    padding-left: 20px;
+}
+
+.dashboard {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+#dashboard-icon {
+    height: 50px;
+}
+
+.sidebar-item {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
 
 
 /* main-container */
@@ -89,6 +114,8 @@
         "projects projects projects trending"
     ;
     background-color: #E6E6E8;
+    border-radius: 25px;
+    margin: 25px;
 }
 
 /* projects */
