--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ h1 {
 .content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     grid-template-areas: 
         "projects projects projects announcements"
         "projects projects projects announcements"
@@ -201,10 +201,12 @@ h1 {
 /* projects */
 .projects  {
     grid-area: projects;
+    display: flex;
+    flex-direction: column;
 }
 
 .projects > .content-header {
-    padding-left: 1rem;
+    padding-left: 2rem;
 }
 
 .content-header {
@@ -214,8 +216,10 @@ h1 {
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-rows: repeat(3, 1fr);
     gap: 2rem;
     padding: 1rem;
+    flex-grow: 1;
 }
 
 .card {
@@ -231,6 +235,25 @@ h1 {
     height: 100%;
 }
 
+.card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    gap: 0.5rem;
+}
+
+#start, #eye, #for {
+    height: 30px;
+}
+
 .text {
     padding: 1rem;
 }
@@ -238,9 +261,60 @@ h1 {
 /* announcements */
 .announcements {
     grid-area: announcements;
+    display: flex;
+    flex-direction: column;
+}
+
+.announcements > .content-header {
+    padding-left: 2rem;
+}
+
+.announcements > .card {
+    margin: 1rem;
+    padding: 1rem;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1px;
+}
+
+.line {
+    border: 1px solid #E6E6E8;
 }
 
 /* trending */
 .trending {
     grid-area: trending;
+    display: flex;
+    flex-direction: column;
 }
+
+.trending > .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1rem;
+    flex-grow: 1;
+    padding: 1rem;
+}
+
+.trending > .content-header {
+    padding-left: 2rem;
+}
+
+.trending-article {
+    display: flex;
+    flex-direction: row;
+}
+
+.thumb-up {
+    height: 50px;
+}
+
+.trending-article-content {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1rem;
+}
+
